Corrected img size on smaller devices

--- a/src/containers/possibility/possibility.css
+++ b/src/containers/possibility/possibility.css
@@ -74,9 +74,7 @@
   .gpt3__possibility-content {
     margin-top: 2rem;
   }
-}
 
-@media screen and (max-width: 700px) {
   .gpt3__possibility-image img {
     width: 100%;
     height: 100%;
